# ecu_gw_t113

./: CMakeLists.txt  README.md  hello.c  toolchain-t113-static.cmake
include/ecu/: ecu_command.h  ecu_limits.h  ecu_proto.h  ecu_slip.h  ecu_telemetry.h
include/gw/: gw_app.h  gw_cmd_ui.h  gw_net.h  gw_router.h  gw_uart.h
src/: main.c
src/docs/: cmd_ui_patch_plan.md  protocol_v1_0.md
src/ecu/: ecu_crc16.c  ecu_proto.c  ecu_slip.c
src/gw/: gw_app.c  gw_cmd_ui.c  gw_net.c  gw_router.c  gw_uart.c
src/tools/: Makefile  uart_bl_update.c
tests/: test_slip_frame.c
